Readme and Favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dowran Rowshenow - Portfolio</title>
-    <link rel="icon" type="image/png" href="images/profile_small.jpg">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img id='profile-image' src="images/profile_small.jpg" alt="Profile Picture" class="profile-image">
+                <img id='profile-image' src="favicon.ico" alt="Profile Picture" class="profile-image">
             </div>
         </div>
     </section>
