--- a/index.html
+++ b/index.html
@@ -98,14 +98,17 @@
                     <div class="skills">
                         <h3 id="skills-title">Skills</h3>
                         <div class="skill-tags">
-                            <span class="skill-tag">JavaScript</span>
-                            <span class="skill-tag">React</span>
-                            <span class="skill-tag">Node.js</span>
-                            <span class="skill-tag">Python</span>
                             <span class="skill-tag">HTML/CSS</span>
-                            <span class="skill-tag">Git</span>
-                            <span class="skill-tag">AWS</span>
+                            <span class="skill-tag">JavaScript</span>
+                            <span class="skill-tag">Python</span>
+                            <span class="skill-tag">Django</span>
+                            <span class="skill-tag">Java</span>
+                            <span class="skill-tag">Dart</span>
+                            <span class="skill-tag">Flutter</span>
+                            <span class="skill-tag">Git/GitHub</span>
+                            <span class="skill-tag">SQLite/MySQL</span>
                             <span class="skill-tag">Docker</span>
+                            <span class="skill-tag">Linux</span>
                         </div>
                     </div>
                 </div>
@@ -136,8 +139,8 @@
                             <span class="tech-tag">MongoDB</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> <span id="project-code">Code</span></a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> <span id="project-live">Live</span></a>
+                            <a href="#" class="project-link"><i class="fab fa-github"></i> <span id="project-code-text">Code</span></a>
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> <span id="project-live-text">Live</span></a>
                         </div>
                     </div>
                 </div>
@@ -204,11 +207,11 @@
                         Feel free to reach out if you'd like to connect!
                     </p>
                     <div class="contact-links">
-                        <a href="mailto:your.email@example.com" class="contact-link">
+                        <a href="mailto:dowranrowshenow@gmail.com" class="contact-link">
                             <i class="fas fa-envelope"></i>
-                            your.email@example.com
+                            dowranrowshenow@gmail.com
                         </a>
-                        <a href="https://github.com/yourusername" class="contact-link" target="_blank">
+                        <a href="https://github.com/dowranrowshenow" class="contact-link" target="_blank">
                             <i class="fab fa-github"></i>
                             GitHub
                         </a>
@@ -216,9 +219,13 @@
                             <i class="fab fa-linkedin"></i>
                             LinkedIn
                         </a>
-                        <a href="https://twitter.com/yourusername" class="contact-link" target="_blank">
-                            <i class="fab fa-twitter"></i>
-                            Twitter
+                        <a href="https://fiverr.com/dowranrowshenow" class="contact-link" target="_blank">
+                            <i class="fab fa-fiverr"></i>
+                            Fiverr
+                        </a>
+                        <a href="https://leetcode.com/dowranrowshenow/" class="contact-link" target="_blank">
+                            <i class="fab fa-leetcode"></i>
+                            LeetCode
                         </a>
                     </div>
                 </div>
@@ -229,7 +236,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p id="footer-copyright">&copy; 2024 Your Name. All rights reserved.</p>
+            <p id="footer-copyright">&copy; 2025 Your Name. All rights reserved.</p>
         </div>
     </footer>
 
