--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             <i class="fab fa-github"></i>
                             GitHub
                         </a>
-                        <a href="https://linkedin.com/in/yourusername" class="contact-link" target="_blank">
+                        <a href="https://linkedin.com/in/dowranrowshenow" class="contact-link" target="_blank">
                             <i class="fab fa-linkedin"></i>
                             LinkedIn
                         </a>
