--- a/index.html
+++ b/index.html
@@ -124,23 +124,27 @@
                 <div class="project-card">
                     <div class="project-image">
                         <div class="project-placeholder">
+                            <!--
                             <i class="fas fa-code"></i>
+                            <iframe src="https://dowranrowshenow.github.io/Portfolio/"></iframe>
+                            -->
+                            <img src="images/todowebapp-login.png" align='center' width='100%' height='100%' alt="Todo Web App">
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title" id="project-1-title">Project One</h3>
+                        <h3 class="project-title" id="project-1-title">Todo Web App</h3>
                         <p class="project-description" id="project-1-desc">
-                            A modern web application built with React and Node.js.
+                            A modern web application built with Python and Django.
                             Features include user authentication, real-time updates, and responsive design.
                         </p>
                         <div class="project-tech">
-                            <span class="tech-tag">React</span>
-                            <span class="tech-tag">Node.js</span>
-                            <span class="tech-tag">MongoDB</span>
+                            <span class="tech-tag">Django</span>
+                            <span class="tech-tag">HTML/CSS/JS</span>
+                            <span class="tech-tag">SQLite</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" class="project-link"><i class="fab fa-github"></i> <span id="project-code-text">Code</span></a>
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i> <span id="project-live-text">Live</span></a>
+                            <a href="https://github.com/dowranrowshenow/TodoWebApp" target="_blank" class="project-link"><i class="fab fa-github"></i> <span id="project-code-text">Code</span></a>
+                            <a href="https://zeroteams.pythonanywhere.com/" target="_blank"class="project-link"><i class="fas fa-external-link-alt"></i> <span id="project-live-text">Live</span></a>
                         </div>
                     </div>
                 </div>
@@ -215,10 +219,12 @@
                             <i class="fab fa-github"></i>
                             GitHub
                         </a>
+                        <!--
                         <a href="https://linkedin.com/in/dowranrowshenow" class="contact-link" target="_blank">
                             <i class="fab fa-linkedin"></i>
                             LinkedIn
                         </a>
+                        -->
                         <a href="https://fiverr.com/dowranrowshenow" class="contact-link" target="_blank">
                             <i class="fab fa-fiverr"></i>
                             Fiverr
