--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <span class="skill-tag">Dart</span>
                             <span class="skill-tag">Flutter</span>
                             <span class="skill-tag">Git/GitHub</span>
-                            <span class="skill-tag">SQLite/MySQL</span>
+                            <span class="skill-tag">SQLite/PostgreSQL</span>
                             <span class="skill-tag">Docker</span>
                             <span class="skill-tag">Linux</span>
                         </div>
@@ -135,12 +135,12 @@
                         <h3 class="project-title" id="project-1-title">Todo Web App</h3>
                         <p class="project-description" id="project-1-desc">
                             A modern web application built with Python and Django.
-                            Features include user authentication, real-time updates, and responsive design.
+                            Features include user authentication, e-mail verification, and responsive design.
                         </p>
                         <div class="project-tech">
                             <span class="tech-tag">Django</span>
                             <span class="tech-tag">HTML/CSS/JS</span>
-                            <span class="tech-tag">SQLite</span>
+                            <span class="tech-tag">PostgreSQL</span>
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/dowranrowshenow/TodoWebApp" target="_blank" class="project-link"><i class="fab fa-github"></i> <span id="project-code-text">Code</span></a>
