--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary" id="btn-view-work">View My Work</a>
                     <a href="#contact" class="btn btn-secondary" id="btn-contact">Get In Touch</a>
+                    <div class="cv-buttons">
+                        <!--
+                        <a href="cv.pdf" download class="btn btn-download">
+                            <i class="fas fa-download"></i> Download CV
+                        </a>
+                        -->
+                        <a href="cv.pdf" target="_blank" rel="noopener" class="btn btn-view">
+                            <i class="fas fa-eye"></i> View CV
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="hero-image">
