Remove unused glow script

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <i class="fas fa-download"></i> Download CV
                         </a>
                         -->
-                        <a href="cv.pdf" target="_blank" rel="noopener" class="btn btn-view">
+                        <a id="btn-view-cv" href="cv.pdf" target="_blank" rel="noopener" class="btn btn-view">
                             <i class="fas fa-eye"></i> View CV
                         </a>
                     </div>
@@ -159,7 +159,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/dowranrowshenow/TodoWebApp" target="_blank" class="project-link"><i class="fab fa-github"></i> <span id="project-code-text">Code</span></a>
-                            <a href="https://zeroteams.pythonanywhere.com" target="_blank"class="project-link"><i class="fas fa-external-link-alt"></i> <span id="project-live-text">Live</span></a>
+                            <a href="https://zeroteams.pythonanywhere.com" target="_blank" class="project-link"><i class="fas fa-external-link-alt"></i> <span id="project-live-text">Live</span></a>
                         </div>
                     </div>
                 </div>
@@ -185,8 +185,8 @@
                             <span class="tech-tag">Cloudinary</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/dowranrowshenow/SocialMediaWebApp" class="project-link"><i class="fab fa-github"></i> <span class="project-code-text">Code</span></a>
-                            <a href="https://dowranrowshenow3d.pythonanywhere.com" class="project-link"><i class="fas fa-external-link-alt"></i> <span class="project-live-text">Live</span></a>
+                            <a href="https://github.com/dowranrowshenow/SocialMediaWebApp" target="_blank" class="project-link"><i class="fab fa-github"></i> <span class="project-code-text">Code</span></a>
+                            <a href="https://dowranrowshenow3d.pythonanywhere.com" target="_blank" class="project-link"><i class="fas fa-external-link-alt"></i> <span class="project-live-text">Live</span></a>
                         </div>
                     </div>
                 </div>
